# wrapper-soc-jpeg

./: CMakeLists.txt
block/: BlockMaker.cpp  BlockMaker.h
common/: CMakeLists.txt  block_types.h  pixel.h
encoder/: CMakeLists.txt  ReadMe.md  encoder.cpp
encoder/rtl/: DCTQ.cpp  DCTQ.h  EncoderTop.cpp  EncoderTop.h  Entropy.cpp  Entropy.h  HeaderGen.cpp  HeaderGen.h  JPEG_Encoder.cpp  JPEG_Encoder.h  encoder.cpp  encoder.h  jpeg_encoder.cpp  jpeg_encoder.h
encoder/tb/: sc_main.cpp  tb_encoder.cpp
isp/: CMakeLists.txt  isp.cpp  isp.h
isp/python/: check_output.py  gen_pixels.py  run_test.py
isp/rtl/: ISPTop.cpp  ISPTop.h  ReadMe.md  isp.cpp  isp.h  isp_stub.cpp  isp_stub.h  pixel.h
isp/tb/: sc_main.cpp  tb_isp.cpp
mcu/: CMakeLists.txt  mcu.cpp  mcu.h
memory/: CMakeLists.txt  mem_ctrl.cpp  mem_ctrl.h
periph/: CMakeLists.txt  i2c.cpp  i2c.h
soc_top/: BitstreamFifo.cpp  BitstreamFifo.h  BitstreamSink.cpp  BitstreamSink.h  CMakeLists.txt  ConfigRegs.cpp  ConfigRegs.h  Dmastub.cpp  Dmastub.h  PixelFifo.cpp  PixelFifo.h  SoCTop.cpp  SoCTop.h  VisionSoC.cpp  VisionSoC.h  WordFifo.cpp  WordFifo.h  soc_top.cpp  soc_top.h
tb/: sc_main.cpp
